-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.0.0
-
None
Just make a new project and let the name begin with a number.
If you then try to run/debug it deployment works, but launching it will not.
I saw this was an issue back in qtcreator 2.7., too. But it is still present it seems.
For Gerrit Dashboard: QTCREATORBUG-11319 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
76378,1 | Android: Package names aren't allowed to start with a '_' | dev | qt/qttools | Status: MERGED | +2 | 0 |