Android: Package names aren't allowed to start with a '_'

Apparently that doesn't work.

Task-number: QTCREATORBUG-11319
Change-Id: If97f0bc5c49e99dac42ec3c539f5ba4b2f060bec
Reviewed-by: Eskil Abrahamsen Blomfeldt <eskil.abrahamsen-blomfeldt@digia.com>